@@ -1,3 +1,9 @@
+2007-06-14  Edward Hervey  <edward@fluendo.com>
+
+	* pitivi/elements/thumbnailsink.py:
+	First take at a thumbnailing sink that converts RGB buffers into
+	GdkPixbuf usable in gtk widgets.
+
 2007-05-30  Edward Hervey  <edward@fluendo.com>
 
 	* pitivi/ui/timelineobjects.py:
